Issue #1614206: label width too small for grouped days.

--- a/office_hours.css
+++ b/office_hours.css
@@ -7,7 +7,7 @@
 
 .oh-display-label {
   display: inline-block; /* give each label the same width, to align the hours. */
-  min-width: 9em;
+//  min-width: 9em;
 }
 
 .oh-display-hours {
